src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>APN__c</fullName>
        <label>Parcel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Unit_Size__c</fullName>
        <label>Average Unit Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Weighted_Rent__c</fullName>
        <label>Average Weighted Rent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building_Location__c</fullName>
        <label>Building Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Park__c</fullName>
        <label>Building Park</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ceiling_Height__c</fullName>
        <label>Ceiling Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Building Class</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Column_Spacing__c</fullName>
        <label>Column Spacing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <label>Construction</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Factor__c</fullName>
        <label>Core Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Costar_Property_ID__c</fullName>
        <externalId>true</externalId>
        <label>Costar Property ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OKALOOSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OKLAHOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alamance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alleghany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beaufort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bertie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bladen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunswick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buncombe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabarrus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caldwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carteret</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caswell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catawba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherokee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherokee Reservation (Qualla Boundary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chowan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Until_Loan_Maturity__c</fullName>
        <formula>Loan_Maturity_Date__c  -  TODAY()</formula>
        <inlineHelpText>How many days remain until loan maturity?</inlineHelpText>
        <label>Days Until Loan Maturity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Docks__c</fullName>
        <label>Docks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drive_Ins__c</fullName>
        <label>Drive-Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elevators__c</fullName>
        <label>Elevators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research- Sold</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Image_Attachment_Id__c</fullName>
        <label>Image Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <formula>IF( ISNULL(Image_Attachment_Id__c ), &apos;&apos; , HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; +Image_Attachment_Id__c  , &apos;Image&apos;,&apos;_blank&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <inlineHelpText>Loan To Value</inlineHelpText>
        <label>LTV</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Land_Acres__c</fullName>
        <label>Land (Acres)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_SF__c</fullName>
        <label>Land (SF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Sale_Date__c</fullName>
        <label>Last Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Sale_Price__c</fullName>
        <label>Last Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Description__c</fullName>
        <label>Legal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <label>Lender</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amortization__c</fullName>
        <label>Loan Amortization</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Balance__c</fullName>
        <inlineHelpText>What is the current balance of the loan?</inlineHelpText>
        <label>Loan Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Maturity_Date__c</fullName>
        <inlineHelpText>When does the loan mature?</inlineHelpText>
        <label>Loan Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Date2__c</fullName>
        <label>Loan Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Date__c</fullName>
        <inlineHelpText>When was the loan originated?</inlineHelpText>
        <label>system.loan origination date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loan_Principal__c</fullName>
        <inlineHelpText>What was the balance at origination?</inlineHelpText>
        <label>Loan Principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>AK-Anchorage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Huntsville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Montgomery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fayetteville/Springdale/Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fort Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Little Rock/N Little Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-East Bay/Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Marin/Sonoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Salinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Luis Obispo/Paso Robles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Barbara/Sta Maria/Goleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Cruz/Watsonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-South Bay/San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Stockton/Modesto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Visalia/Porterville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Colorado Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-Hartford</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Stories__c</fullName>
        <label>Number of Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OConnor_ID__c</fullName>
        <description>Generic External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_ID__c</fullName>
        <description>For use as an external ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>Occupancy (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Entity__c</fullName>
        <label>Ownership Entity</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Ratio2__c</fullName>
        <label>Parking Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Ratio__c</fullName>
        <label>system.parking ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parking_Spaces__c</fullName>
        <label>Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Primary Contact)</relationshipLabel>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Use__c</fullName>
        <label>Primary Use</label>
        <picklist>
            <picklistValues>
                <fullName>Airplane Hangar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Salvage Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement or Gravel Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical or Oil Refinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Storage Yard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex- Data Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex-Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ind- Data Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ind-Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Live &amp; Work Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landfill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loft &amp; Creative Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumberyard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Office &amp; Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Data Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Live &amp; Work Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office with street-level Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railroad Yard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigeration &amp; Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PropertyType__c</fullName>
        <label>PropertyType</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <label>Property Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Photo_2__c</fullName>
        <label>Photo 2</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Photo__c</fullName>
        <label>Photo 1</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rail_Lines__c</fullName>
        <label>Rail Lines</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Image__c</fullName>
        <formula>IMAGE( IF( Image_Attachment_Id__c=&apos;&apos;, &apos;/resource/1377095193000/McLabs2__NoBuildingImage&apos; , &apos;/servlet/servlet.FileDownload?file=&apos; +Image_Attachment_Id__c ) , Property_Address__c, 40, 40)</formula>
        <label>Report Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Type__c</fullName>
        <label>Retail Type</label>
        <picklist>
            <picklistValues>
                <fullName>Community Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifestyle Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlet Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strip Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Regional Mall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rooms__c</fullName>
        <label>Room Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Use__c</fullName>
        <label>Secondary Use</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties Managed</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprinklers__c</fullName>
        <label>Sprinklers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Existing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demolished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <label>Submarket</label>
        <picklist>
            <picklistValues>
                <fullName>Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <label>Tenancy</label>
        <picklist>
            <picklistValues>
                <fullName>Multi-Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Typical_Floor_Size__c</fullName>
        <label>Typical Floor Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>This field is only used when pulling/pushing data from/into McLabs</description>
        <label>Unit Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Renovated__c</fullName>
        <label>Year Renovated</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoning__c</fullName>
        <label>Zoning</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Owners__c</fullName>
        <description>Used to create report for properties without owners</description>
        <inlineHelpText>Used to create report for properties without owners</inlineHelpText>
        <label># of Owners</label>
        <summaryForeignKey>Ownership__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>Healthcare</fullName>
        <columns>NAME</columns>
        <columns>Property_Address__c</columns>
        <columns>City__c</columns>
        <columns>Square_Footage__c</columns>
        <columns>Primary_Use__c</columns>
        <columns>Land_Acres__c</columns>
        <columns>Land_SF__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Year_Built__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PropertyType__c</field>
            <operation>equals</operation>
            <value>Healthcare</value>
        </filters>
        <label>Healthcare</label>
    </listViews>
    <listViews>
        <fullName>Hospitality</fullName>
        <columns>NAME</columns>
        <columns>Property_Address__c</columns>
        <columns>City__c</columns>
        <columns>Rooms__c</columns>
        <columns>Primary_Use__c</columns>
        <columns>Land_Acres__c</columns>
        <columns>Land_SF__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Year_Built__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PropertyType__c</field>
            <operation>equals</operation>
            <value>Hospitality</value>
        </filters>
        <label>Hospitality</label>
    </listViews>
    <listViews>
        <fullName>Industrial</fullName>
        <columns>NAME</columns>
        <columns>Property_Address__c</columns>
        <columns>City__c</columns>
        <columns>Primary_Use__c</columns>
        <columns>Square_Footage__c</columns>
        <columns>Land_Acres__c</columns>
        <columns>Land_SF__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Year_Built__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PropertyType__c</field>
            <operation>equals</operation>
            <value>Industrial</value>
        </filters>
        <label>Industrial</label>
    </listViews>
    <listViews>
        <fullName>Land</fullName>
        <columns>NAME</columns>
        <columns>Property_Address__c</columns>
        <columns>City__c</columns>
        <columns>Primary_Use__c</columns>
        <columns>Land_Acres__c</columns>
        <columns>Land_SF__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Zoning__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PropertyType__c</field>
            <operation>equals</operation>
            <value>Land</value>
        </filters>
        <label>Land</label>
    </listViews>
    <listViews>
        <fullName>Multifamily</fullName>
        <columns>NAME</columns>
        <columns>Property_Address__c</columns>
        <columns>City__c</columns>
        <columns>Primary_Use__c</columns>
        <columns>Square_Footage__c</columns>
        <columns>Units__c</columns>
        <columns>Land_Acres__c</columns>
        <columns>Land_SF__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Year_Built__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PropertyType__c</field>
            <operation>equals</operation>
            <value>Multi-Family</value>
        </filters>
        <label>Multi-family</label>
    </listViews>
    <listViews>
        <fullName>Office</fullName>
        <columns>NAME</columns>
        <columns>Property_Address__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Primary_Contact_Email__c</columns>
        <columns>Primary_Contact_Phone__c</columns>
        <columns>City__c</columns>
        <columns>Primary_Use__c</columns>
        <columns>Square_Footage__c</columns>
        <columns>Land_Acres__c</columns>
        <columns>Land_SF__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Year_Built__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PropertyType__c</field>
            <operation>equals</operation>
            <value>Office</value>
        </filters>
        <label>Office</label>
    </listViews>
</CustomObject>